# cpp-arrays

./: CMakeLists.txt
include/: array.h
src/: array.cpp  array.hpp  library.cpp
test/: test_arrays.cpp
